--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Uliya</title>
-  <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <title>Uliyas</title>
+   <!-- Custom styles for this template -->
+   <link href="css/style.css" rel="stylesheet" />
+
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+
+ 
+ 
 </head>
 
 <body>
@@ -541,6 +544,8 @@
     </div>
   </section>
   <!-- footer section -->
+
+
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
 </body>
