--- a/about.html
+++ b/about.html
@@ -13,10 +13,8 @@
   <meta name="author" content="" />
 
   <title>Uliya</title>
-    <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet" />
-    <!-- responsive style -->
-    <link href="css/responsive.css" rel="stylesheet" />
+   <!-- Custom styles for this template -->
+   <link href="css/style.css" rel="stylesheet" />
 
 
   <!-- bootstrap core css -->
@@ -25,14 +23,17 @@
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
 
+  <!-- Custom styles for this template -->
+  <link href="css/style.css" rel="stylesheet" />
+  <!-- responsive style -->
+  <link href="css/responsive.css" rel="stylesheet" />
+ 
 
-  
 </head>
 
 <body class="sub_page">
 
-   
-  <div class="hero_area">
+     <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
       <div class="container-fluid">
@@ -50,7 +51,7 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-   
+  
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
                   <ul class="navbar-nav  ">
@@ -92,9 +93,9 @@
       </div>
       <div class="box">
         <div class="img-box">
-          <img src="images/about-img.webp" alt="">
+          <img src="images/about-img.jpg" alt="">
           <div class="about_img-bg">
-            <img src="images/about-img-bg.webp" alt="">
+            <img src="images/about-img-bg.png" alt="">
           </div>
         </div>
         <div class="detail-box">
@@ -167,7 +168,6 @@
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
-
 </body>
 
 </html>
