--- a/portfolio.html
+++ b/portfolio.html
@@ -13,19 +13,17 @@
   <meta name="author" content="" />
 
   <title>Uliya</title>
-    <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet" />
-    <!-- responsive style -->
-    <link href="css/responsive.css" rel="stylesheet" />
 
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet" />
+
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-
-
+  
 </head>
 
 <body class="sub_page">
@@ -79,6 +77,10 @@
     <!-- end header section -->
 
   </div>
+
+
+
+  <!-- portfolio section -->
 
   <section class="portfolio_section layout_padding">
     <div class="container">
@@ -159,7 +161,7 @@
 
   </section>
 
-
+  
   <section class="info_section ">
     <div class="container">
       <div class="info_container">
@@ -205,6 +207,8 @@
       </p>
     </div>
   </section>
+  
+
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
